# rust-aws-lambda-sample

./: README.md
infra/: biome.json  package-lock.json  package.json
infra/lib/: lambda-stack.ts  repository-stack.ts
lambda/: .dockerignore  Cargo.toml  Dockerfile  Makefile
lambda/src/: Dockerfile  main.rs
